// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApiDemo /> basic dumb component render 1`] = `
<div
  className="server-client-api-demo"
>
  Test text
</div>
`;

exports[`<ApiDemoConnected /> render occurs through connection 1`] = `
<withImmutablePropsToJS(ApiDemo)
  getHardcodedText={[Function]}
  hardcodedText=""
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`mapDispatchToProps processes the actions correctly 1`] = `
Object {
  "getHardcodedText": [Function],
}
`;

exports[`mapStateToProps processes the state correctly 1`] = `
Object {
  "hardcodedText": "Test Text",
}
`;
